--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -11,17 +11,32 @@
             <div class="footer_links">
                 <p><?php echo $this->__('Informationen') ?></p>
                 <ul>
-                    <li><a href="<?php echo Mage::getUrl('bestellvorgang'); ?>"><?php echo $this->__('Bestellvorgang') ?></a></li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('bestellvorgang'); ?>"><?php echo $this->__('Bestellvorgang') ?></a>
+                    </li>
                     <li><a href="<?php echo Mage::getUrl('lieferung'); ?>"><?php echo $this->__('Lieferung') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('zahlungsarten'); ?>"><?php echo $this->__('Zahlungsarten') ?></a></li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('zahlungsarten'); ?>"><?php echo $this->__('Zahlungsarten') ?></a>
+                    </li>
                     <?php if (Mage::app()->getStore()->getId() == '5'): /* B2C */ ?>
-                        <li><a href="<?php echo Mage::getUrl('widerrufsbelehrung'); ?>"><?php echo $this->__('Widerrufsbelehrung') ?></a></li>
-                        <li><a href="<?php echo Mage::getUrl('widerrufsformular'); ?>"><?php echo $this->__('Widerrufsformular') ?></a></li>
-                        <li><a href="<?php echo Mage::getUrl('streitschlichtung'); ?>"><?php echo $this->__('Streitschlichtung') ?></a></li>
+                        <li>
+                            <a href="<?php echo Mage::getUrl('widerrufsbelehrung'); ?>"><?php echo $this->__('Widerrufsbelehrung') ?></a>
+                        </li>
+                        <li>
+                            <a href="<?php echo Mage::getUrl('widerrufsformular'); ?>"><?php echo $this->__('Widerrufsformular') ?></a>
+                        </li>
+                        <li>
+                            <a href="<?php echo Mage::getUrl('streitschlichtung'); ?>"><?php echo $this->__('Streitschlichtung') ?></a>
+                        </li>
                     <?php endif ?>
-                    <li><a href="<?php echo Mage::getUrl('batteriegesetz'); ?>"><?php echo $this->__('Hinweis nach dem Batteriegesetz') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('referenzen'); ?>"><?php echo $this->__('Referenzen') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('catalogsearch/advanced'); ?>"><?php echo $this->__('Erweiterte Suche') ?></a></li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('batteriegesetz'); ?>"><?php echo $this->__('Hinweis nach dem Batteriegesetz') ?></a>
+                    </li>
+                    <li><a href="<?php echo Mage::getUrl('referenzen'); ?>"><?php echo $this->__('Referenzen') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('catalogsearch/advanced'); ?>"><?php echo $this->__('Erweiterte Suche') ?></a>
+                    </li>
                 </ul>
             </div>
             <div class="footer_service">
@@ -30,11 +45,16 @@
                     <li><a class="quality"><?php echo $this->__('Sicher einkaufen') ?></a></li>
                     <li><a class="zertifikate"><?php echo $this->__('Zertifikate') ?></a></li>
                     <li><a href="<?php echo Mage::getUrl('contacts'); ?>"><?php echo $this->__('Kontakt') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('leistungen'); ?>"><?php echo $this->__('Leistungen') ?></a></li>
+                    <li><a href="<?php echo Mage::getUrl('leistungen'); ?>"><?php echo $this->__('Leistungen') ?></a>
+                    </li>
                     <li><a href="<?php echo Mage::getUrl('planung'); ?>"><?php echo $this->__('Planung') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('altgeraeteentsorgung'); ?>"><?php echo $this->__('Altger&auml;teentsorgung') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('montage'); ?>"><?php echo $this->__('Montage-Service') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('service'); ?>"><?php echo $this->__('Gastro-Service') ?></a></li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('altgeraeteentsorgung'); ?>"><?php echo $this->__('Altger&auml;teentsorgung') ?></a>
+                    </li>
+                    <li><a href="<?php echo Mage::getUrl('montage'); ?>"><?php echo $this->__('Montage-Service') ?></a>
+                    </li>
+                    <li><a href="<?php echo Mage::getUrl('service'); ?>"><?php echo $this->__('Gastro-Service') ?></a>
+                    </li>
                     <li>
                         <a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/fax/faxbestellung.pdf'; ?>"
                            target="_blank" rel="nofollow noopener noreferrer">Faxbestellung</a></li>
@@ -72,13 +92,27 @@
             <div class="footer_manufactures">
                 <p><?php echo $this->__('Unsere starken Gastro-Marken') ?></p>
                 <ul>
-                    <li><a href="<?php echo Mage::getUrl('rational'); ?>"><?php echo $this->__('Rational Kombidämpfer') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('winterhalter'); ?>"><?php echo $this->__('Winterhalter Spülmaschinen') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('jura'); ?>"><?php echo $this->__('Jura Kaffeevollautomaten') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('panasonic'); ?>"><?php echo $this->__('Panasonic Mikrowellen') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('hoshizaki'); ?>"><?php echo $this->__('Hoshizaki Eiswürfelbereiter') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('bartscher'); ?>"><?php echo $this->__('Bartscher Gastronomiebedarf') ?></a></li>
-                    <li><a href="<?php echo Mage::getUrl('marken'); ?>"><?php echo $this->__('weitere Gastro-Marken') ?></a></li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('rational'); ?>"><?php echo $this->__('Rational Kombidämpfer') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('winterhalter'); ?>"><?php echo $this->__('Winterhalter Spülmaschinen') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('jura'); ?>"><?php echo $this->__('Jura Kaffeevollautomaten') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('panasonic'); ?>"><?php echo $this->__('Panasonic Mikrowellen') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('hoshizaki'); ?>"><?php echo $this->__('Hoshizaki Eiswürfelbereiter') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('bartscher'); ?>"><?php echo $this->__('Bartscher Gastronomiebedarf') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('marken'); ?>"><?php echo $this->__('weitere Gastro-Marken') ?></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -160,14 +194,16 @@
     </div>
 </footer>
 <div class="cookie-container">
-    <div class="message">
-        <p><?php echo $this->__('Wir verwenden Cookies, um Ihnen den bestmöglichen Service zu gewährleisten. Wenn Sie auf der Seite weitersurfen stimmen Sie der Cookie-Nutzung zu.') ?></p>
-    </div>
-    <div class="actions">
-        <div class="button-group stacked-for-small">
-            <a class="button close-cookie"><?php echo $this->__('schließen') ?></a>
-            <a class="button hollow"
-               href="<?php echo $this->getUrl('datenschutz') ?>"><?php echo $this->__('Datenschutzerklärung') ?></a>
+    <div class="cookie-content">
+        <div class="message">
+            <p><?php echo $this->__('Wir verwenden Cookies, um Ihnen den bestmöglichen Service zu gewährleisten. Wenn Sie auf der Seite weitersurfen stimmen Sie der Cookie-Nutzung zu.') ?></p>
+        </div>
+        <div class="actions">
+            <div class="button-group stacked-for-small">
+                <a class="button close-cookie"><?php echo $this->__('schließen') ?></a>
+                <a class="button hollow"
+                   href="<?php echo $this->getUrl('datenschutz') ?>"><?php echo $this->__('Datenschutzerklärung') ?></a>
+            </div>
         </div>
     </div>
 </div>
