--- a/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar.phtml
@@ -1,4 +1,16 @@
 <?php
+/**
+ * @project gastrodax
+ *
+ * @author pbreitsprecher
+ * @copyright 2017
+ * @license https://opensource.org/licenses/MIT The MIT License (MIT)
+ *
+ * @last_modified 27.11.17 16:40
+ * @file list_without_toolbar.phtml
+ *
+ */
+
 function clean($string)
 {
 
@@ -45,7 +57,6 @@ $_helper = $this->helper('catalog/output');
     <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
     <div class="category-products">
-        <?php echo $this->getToolbarHtml() ?>
         <?php // List mode ?>
         <?php if ($this->getMode() != 'grid'): ?>
             <?php $_iterator = 0; ?>
@@ -153,8 +164,5 @@ $_helper = $this->helper('catalog/output');
                 });
             </script>
         <?php endif; ?>
-        <div class="toolbar-bottom">
-            <?php echo $this->getToolbarHtml() ?>
-        </div>
     </div>
 <?php endif; ?>
