--- a/skin/frontend/foundation/default/src/assets/scss/custom/_print.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_print.scss
@@ -1,5 +1,5 @@
 @media print {
-  a[href]:after, #tsbadge4_db8d3657bdbe440c985ae127463eaad4, #___ratingbadge_0, .search, .nav, .account, .footer-container, .reasons, .product-images, .breadcrumbs, .tabs, .add-to-cart, .sidebar, .toolbar, .revslider  {
+  a[href]:after, #tsbadge4_db8d3657bdbe440c985ae127463eaad4, #___ratingbadge_0, .search, .nav, .account, .footer-container, .reasons, .product-images, .breadcrumbs, .tabs, .add-to-cart, .sidebar, .toolbar, .revslider, .deal, nav  {
     display: none !important;
   }
   .tabs-content {
