--- a/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
@@ -2,8 +2,6 @@
 
 .row {
   @extend .grid-x, .grid-margin-x;
-  justify-content: center;
-  align-items: center;
   .column, .columns {
     @extend .cell;
   }
@@ -75,7 +73,24 @@ header {
     justify-content: center;
     align-items: center;
     .brand,
-    .hotline,
+    .hotline {
+      @include xy-cell(12, false, 0);
+    }
+    .trusted {
+      @include xy-cell(7, false, 0);
+    }
+    .shipping {
+      @include xy-cell(5, false, 0);
+    }
+  }
+  .header-bottom {
+    @include xy-cell(12);
+    @include xy-grid;
+    justify-content: center;
+    align-items: center;
+    nav {
+      @include xy-cell(4);
+    }
     .search {
       @include xy-cell(12);
       #search_mini_form {
@@ -90,21 +105,9 @@ header {
         }
       }
     }
-  }
-  .header-bottom {
-    @include xy-cell(12);
-    @include xy-grid;
-    justify-content: center;
-    align-items: center;
-    nav {
-      @include xy-cell(4);
-    }
-    .trusted {
-      @include xy-cell(8);
-      .menu {
-        justify-content: center;
-        align-items: center;
-      }
+    .deal {
+      @include xy-cell(12);
+      align-items: center;
     }
     .account {
       @include xy-cell(12);
@@ -433,26 +436,30 @@ footer {
   header {
     .header-top {
       .brand {
-        margin-bottom: 0;
         @include xy-cell(8);
       }
-      .hotline {
-        margin-bottom: 0;
+      .trusted {
         @include xy-cell(4);
       }
-      .search {
-        @include xy-cell(12);
+      .shipping {
+        @include xy-cell(6);
+        justify-content: flex-start;
       }
+      .hotline {
+        @include xy-cell(6);
+        justify-content: flex-end;
+      }
+
     }
     .header-bottom {
       nav {
         @include xy-cell(2);
       }
-      .trusted {
-        @include xy-cell(4);
+      .search {
+        @include xy-cell(10);
       }
       .account {
-        @include xy-cell(6);
+        @include xy-cell(12);
       }
     }
     .quick-access {
@@ -641,20 +648,23 @@ footer {
   header {
     .header-top {
       .brand {
-        @include xy-cell(3);
+        @include xy-cell(2);
+      }
+      .trusted {
+        @include xy-cell(5);
+      }
+      .shipping {
+        @include xy-cell(2);
       }
       .hotline {
         @include xy-cell(3);
-      }
-      .search {
-        @include xy-cell(6);
       }
     }
     .header-bottom {
       nav {
         @include xy-cell(2);
       }
-      .trusted {
+      .search {
         @include xy-cell(6);
       }
       .account {
@@ -768,6 +778,38 @@ footer {
 }
 
 @media screen and #{breakpoint(xlarge)} {
+
+  header {
+    .header-top {
+      .brand {
+        @include xy-cell(2);
+      }
+      .trusted {
+        @include xy-cell(5);
+      }
+      .shipping {
+        @include xy-cell(2);
+      }
+      .hotline {
+        @include xy-cell(3);
+        justify-content: flex-end;
+      }
+    }
+    .header-bottom {
+      nav {
+        @include xy-cell(2);
+      }
+      .search {
+        @include xy-cell(5);
+      }
+      .deal {
+        @include xy-cell(2);
+      }
+      .account {
+        @include xy-cell(3);
+      }
+    }
+  }
 
   .categories-grid {
     @include xy-grid-layout(6, 'li');
