--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -60,7 +60,7 @@
                              alt="Google zertifizierter Händler"/>
                     </a>
                 </li>
-                <li>
+                <li class="shipping">
                     <a href="<?php echo Mage::getUrl('lieferung'); ?>">
                         <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/versandkostenfrei.png' ?>"
                              alt="kostenfreie Lieferung ab 99 EUR">
