--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -66,6 +66,11 @@
       .products-image img {
         max-height: 200px;
       }
+      .extra {
+        margin-top: .5rem;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
