--- a/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
@@ -124,6 +124,11 @@ a[href^="mailto:"]:before {
       color: $primary-color;
     }
   }
+  table {
+     @include breakpoint(small medium) {
+       @include table-stack;
+     }
+   }
 }
 
 .owl-carousel {
