--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -66,13 +66,13 @@
                              alt="kostenfreie Lieferung ab 99 EUR">
                     </a>
                 </li>
+                <li class="deal">
+                    <a href="<?php echo Mage::getUrl('top15'); ?>">TOP15</a>
+                </li>
             </ul>
         </div>
-        <div class="deal">
-            <span><a href="<?php echo Mage::getUrl('top15'); ?>"><img src="<?php echo $this->getSkinUrl('dist/assets/img/top15.png'); ?>" alt="TOP15"/></a></span>
-        </div>
         <div class="hotline">
-                    <a href="tel:+498004566000"><img src="<?php echo $this->getSkinUrl('dist/assets/img/hotline.png'); ?>" alt="Bestell- und Beratungshotline 0800 456 6000" width="200"/></a>
+            <a href="tel:+498004566000">0800 456 6000 <span>Bestell- und Beratungshotline</span></a>
         </div>
 
     </div>
