--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -434,9 +434,9 @@
   }
   .tier-price {
     table {
-      @include breakpoint(small medium) {
-        @include table-stack;
-      }
+      @include breakpoint(medium down) {
+         @include table-stack;
+       }
     }
   }
 }
