--- a/app/design/frontend/foundation/default/template/page/top15.phtml
+++ b/app/design/frontend/foundation/default/template/page/top15.phtml
@@ -14,7 +14,11 @@
                 <?php echo $this->getLayout()->createBlock('page/html_topmenu')->setTemplate('page/html/topmenu.phtml')->toHtml(); ?>
             </div>
             <div class="off-canvas-content" data-off-canvas-content>
-                <img src="<?php echo $this->getSkinUrl('dist/assets/img/top_fifteen.gif'); ?>" alt="TOP 15" />
+                <div class="headbanner">
+                    <div class="banner">
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/top_fifteen.gif'); ?>" alt="TOP 15" />
+                    </div>
+                </div>
                 <div class="main-container col1-layout">
                     <div class="col-main">
                         <?php echo $this->getChildHtml('global_messages') ?>
